cmake_minimum_required(VERSION 3.23)
project(assignment_1_fzj0007)

set(CMAKE_CXX_STANDARD 14)

add_executable(assignment_1_fzj0007
        assignment_1/q1.cpp
        assignment_1/q2.cpp
        assignment_1/q3.cpp
        assignment_1/q4.cpp
        assignment_1/q5.cpp "assignment_1/assignment 1.cpp")
